SET(
	NAME
	cbhamon
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

SET( MOC_SRCS )

MY_WRAP_CPP(
	MOC_SRCS
	"${cbhamon}"
	${HEADER}
)

IF( WIN32 )
	SET( SRCS ${SRCS} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc" )
ENDIF( WIN32 )

ADD_EXECUTABLE(
	${NAME}
	WIN32
	${SRCS}
	${HEADER}
	${MOC_SRCS}
)

IF(WIN32 AND NOT MINGW)
	SET_TARGET_PROPERTIES( ${NAME} PROPERTIES COMPILE_FLAGS "/MP" )
ENDIF(WIN32 AND NOT MINGW)

TARGET_LINK_LIBRARIES(
	${NAME}
	${QT_QTCORE_LIBRARY}
	${QT_QTMAIN_LIBRARY}
	${QT_QTNETWORK_LIBRARY}
	${QT_QTXML_LIBRARY}
	${QT_QTGUI_LIBRARY}
	${QT_HELP_LIBRARIES}
	rec_serialport
	rec_robotinoxt
)

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )

GENERATE_VERSION_RC( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc"  "${ROBOTINO_COMMON_VERSION}" "${NAME}" "${NAME}" "${NAME}.exe" 0 )

IF( WIN32 )
	IF( ARCHITECTURE STREQUAL "i386" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_COMMON_VERSION} "${NAME}.exe" "X86" "win32" )
	ELSEIF( ARCHITECTURE STREQUAL "amd64" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_COMMON_VERSION} "${NAME}.exe" "AMD64" "win32" )
	ENDIF( ARCHITECTURE STREQUAL "i386" )
ENDIF( WIN32 )

INSTALL(
  TARGETS 
  ${NAME}
  DESTINATION bin
)

