SET(
  NAME
  confmerge
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

ADD_EXECUTABLE(
  ${NAME}
  ${SRCS}
  ${HEADER}
)

TARGET_LINK_LIBRARIES(
	${NAME}
	${APPICON}
	${QT_QTCORE_LIBRARY}
	${QT_HELP_LIBRARIES}
)

INSTALL(
  TARGETS ${NAME}
  RUNTIME DESTINATION bin
)

INSTALL(
	FILES ${INIFILE}
	DESTINATION bin
)

if( WIN32 )
else( WIN32 )
	install(CODE "MESSAGE(\"Installing symlink /usr/bin/confmerge.\")")
	INSTALL(CODE "
    EXECUTE_PROCESS( COMMAND mkdir -p ${INSTALL_DIR}/usr/bin )
    ")
    INSTALL(CODE "
    EXECUTE_PROCESS( COMMAND ln -sf /usr/local/robotino/common/bin/confmerge ${INSTALL_DIR}/usr/bin )
    ")
endif( WIN32 )

GENERATE_VERSION( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.h" "${ROBOTINO_COMMON_VERSION}" "${NAME}" "${NAME}" )
GENERATE_VERSION_RC( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc"  "${ROBOTINO_COMMON_VERSION}" "${NAME}" "${NAME}" "${NAME}.exe" 0 )

IF( WIN32 )
	IF( ARCHITECTURE STREQUAL "i386" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_COMMON_VERSION} "${NAME}.exe" "X86" "win32" )
	ELSEIF( ARCHITECTURE STREQUAL "amd64" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_COMMON_VERSION} "${NAME}.exe" "AMD64" "win32" )
	ENDIF( ARCHITECTURE STREQUAL "i386" )
ENDIF( WIN32 )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )
