SET(
  NAME
  printver
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )
#FILE( GLOB RCCFILES *.qrc )

#MY_WRAP_CPP(
#	MOC_SRCS
#	${NAME}
#	${HEADER}
#)

#QT4_ADD_RESOURCES(
#	RCC_SRCS
#	${RCCFILES}
#)

IF( WIN32 )
	SET( SRCS ${SRCS} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc" )
ENDIF( WIN32 )

ADD_EXECUTABLE(
  ${NAME}
  WIN32
  ${SRCS}
  ${HEADER}
#  ${MOC_SRCS}
#  ${RCC_SRCS}
)

IF(WIN32)
	SET_TARGET_PROPERTIES( ${NAME}  PROPERTIES  COMPILE_FLAGS "/wd4251 /MP" )
	SET( APPICON ${CMAKE_CURRENT_SOURCE_DIR}/appicon/appicon.RES.lib )
ENDIF( WIN32 )

TARGET_LINK_LIBRARIES(
	${NAME}
	${APPICON}
	${QT_QTCORE_LIBRARY}
	${QT_QTGUI_LIBRARY}
	${QT_QTMAIN_LIBRARY}
	${QT_HELP_LIBRARIES}
)

INSTALL(
  TARGETS ${NAME}
  RUNTIME DESTINATION bin
)

INSTALL(
	FILES ${INIFILE}
	DESTINATION bin
)

if( WIN32 )
else( WIN32 )
	install(CODE "MESSAGE(\"Installing symlink /usr/bin/iotest.\")")
	INSTALL(CODE "
    EXECUTE_PROCESS( COMMAND mkdir -p ${INSTALL_DIR}/usr/bin )
    ")
    INSTALL(CODE "
    EXECUTE_PROCESS( COMMAND ln -sf /usr/local/robotino/common/bin/printver ${INSTALL_DIR}/usr/bin )
    ")
endif( WIN32 )

GENERATE_VERSION( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.h" "${ROBOTINO_COMMON_VERSION}" "${NAME}" "${NAME}" )
GENERATE_VERSION_RC( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc"  "${ROBOTINO_COMMON_VERSION}" "${NAME}" "${NAME}" "${NAME}.exe" 0 )

IF( WIN32 )
	IF( ARCHITECTURE STREQUAL "i386" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_COMMON_VERSION} "${NAME}.exe" "X86" "win32" )
	ELSEIF( ARCHITECTURE STREQUAL "amd64" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_COMMON_VERSION} "${NAME}.exe" "AMD64" "win32" )
	ENDIF( ARCHITECTURE STREQUAL "i386" )
ENDIF( WIN32 )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )
