SET(
  NAME
  camd2
)

CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/camd2.conf ${CMAKE_CURRENT_BINARY_DIR}/camd2.conf @ONLY )

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

FILE( GLOB LINUX_SRCS usb_cam/*.cpp )
FILE( GLOB LINUX_HEADER usb_cam/*.h )

FILE( GLOB WIN32_SRCS win32/*.cpp )
FILE( GLOB WIN32_HEADER win32/*.h )


MY_WRAP_CPP(
	MOC_SRCS
	${NAME}
	${HEADER}
)

IF( WIN32 )
	SET( SRCS ${SRCS} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc" )
ENDIF( WIN32 )

ADD_EXECUTABLE(
	${NAME}
	${SRCS}
	${HEADER}
	${LINUX_SRCS}
	${LINUX_HEADER}
	${WIN32_SRCS}
	${WIN32_HEADER}
	${MOC_SRCS}
	${MOC_RPC_SRCS}
)

IF(WIN32)
	SET_TARGET_PROPERTIES(
	  ${NAME}
	  PROPERTIES
	  COMPILE_FLAGS "/wd4251 /MP"
	)

	SET_SOURCE_FILES_PROPERTIES(
		${LINUX_SRCS}
		PROPERTIES
		HEADER_FILE_ONLY TRUE
	)
ELSE( WIN32 )
	SET_SOURCE_FILES_PROPERTIES(
		${WIN32_SRCS}
		PROPERTIES
		HEADER_FILE_ONLY TRUE
	)
ENDIF( WIN32 )

TARGET_LINK_LIBRARIES(
	${NAME}
	${QT_QTCORE_LIBRARY}
	${QT_QTGUI_LIBRARY}
	${QT_QTNETWORK_LIBRARY}
	${QT_QTXML_LIBRARY}
	${QT_HELP_LIBRARIES}
	${REC_RPC_LIBRARY}
	${REC_ROBOTINO_DAEMONS_LIBRARY}
	${REC_ROBOTINO_RPC_LIBRARY}

)

INSTALL(
  TARGETS 
  ${NAME}
  DESTINATION bin
)

INSTALL(
  FILES 
  camd2.conf
  DESTINATION "${INSTALL_DIR}/etc/robotino"
)

INSTALL(
  FILES 
  camd2_wrapper.sh
  PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  DESTINATION bin
)

GENERATE_VERSION( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.h" "${ROBOTINO_DAEMONS_VERSION}" "Cam Daemon" "${NAME}" )
GENERATE_VERSION_RC( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc"  "${ROBOTINO_DAEMONS_VERSION}" "Cam Daemon" "${NAME}" "${NAME}.exe" 0 )

IF( WIN32 )
	IF( ARCHITECTURE STREQUAL "i386" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "X86" "win32" )
	ELSEIF( ARCHITECTURE STREQUAL "amd64" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "AMD64" "win32" )
	ENDIF( ARCHITECTURE STREQUAL "i386" )
ENDIF( WIN32 )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( "Linux" FILES ${LINUX_SRCS} ${LINUX_HEADER} )
SOURCE_GROUP( "Win32" FILES ${WIN32_SRCS} ${WIN32_HEADER} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )