SET(
  NAME
  ledd
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

MY_WRAP_CPP(
	MOC_SRCS
	"${ledd}"
	${HEADER}
)

MY_ADD_RESOURCES(
	RCCS
	"images.qrc"
)

SET(
	CONFIG_FILES
	${CMAKE_CURRENT_BINARY_DIR}/ledd.conf
)

ADD_EXECUTABLE(
  ${NAME}
  ${SRCS}
  ${HEADER}
  ${MOC_SRCS}
  ${RCCS}
)

IF(WIN32)
SET_TARGET_PROPERTIES(
  ${NAME}
  PROPERTIES
  COMPILE_FLAGS "/wd4251 /MP"
)
ENDIF( WIN32 )

TARGET_LINK_LIBRARIES(
	${NAME}
	${QT_QTCORE_LIBRARY}
	${QT_QTNETWORK_LIBRARY}
	${QT_QTXML_LIBRARY}
	${QT_QTGUI_LIBRARY}
	${QT_HELP_LIBRARIES}
	${REC_RPC_LIBRARY}
	${REC_ROBOTINO_RPC_LIBRARY}
	${REC_ROBOTINO_DAEMONS_LIBRARY}
	${REC_SERIALPORT_LIBRARY}
)

INSTALL(
  TARGETS 
  ${NAME}
  DESTINATION bin
)

IF( NOT WIN32 )
	INSTALL(
	  FILES
	  ledd.conf
	  DESTINATION "${INSTALL_DIR}/etc/robotino"
	)
ENDIF( NOT WIN32 )

GENERATE_VERSION( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/ledd_version.h" ${ROBOTINO_DAEMONS_VERSION} "LED Matrix daemon" "ledd" )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )
SOURCE_GROUP( "Config" FILES ${CONFIG_FILES} )
