SET(
  NAME
  menud
)

SET( MENUD_STRUCTURE "${CMAKE_CURRENT_SOURCE_DIR}/config/structure.xml" )
SET( MENUD_TRANS "${CMAKE_CURRENT_SOURCE_DIR}/config/trans.xml" )

CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/menud.conf.in ${CMAKE_CURRENT_BINARY_DIR}/menud.conf @ONLY )

SET(
	CONFIG_FILES
	${CMAKE_CURRENT_BINARY_DIR}/menud.conf
	${MENUD_STRUCTURE}
	${MENUD_TRANS}
)

FILE( GLOB SCRIPTS_FILES scripts/*.sh scripts/*.pl )


INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${SHARED_LIB_DIR}/rec/robotino/
)

FILE( GLOB SRCS src/*.cpp )
FILE( GLOB HEADER src/*.h )

MY_WRAP_CPP(
	MOC_SRCS
	${NAME}
	${HEADER}
)

INCLUDE( src/action/CMakeLists.txt )

IF( WIN32 )
	SET( SRCS ${SRCS} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc" )
ENDIF( WIN32 )

ADD_EXECUTABLE(
  ${NAME}
  ${SRCS}
  ${HEADER}
  ${MOC_SRCS}
  ${MOC_RPC_SRCS}
  ${CONFIG_FILES}
  ${SCRIPTS_FILES}
)

IF(WIN32)
SET_TARGET_PROPERTIES(
  ${NAME}
  PROPERTIES
  COMPILE_FLAGS "/wd4251 /MP"
)
ENDIF( WIN32 )

TARGET_LINK_LIBRARIES(
	${NAME}
	${QT_QTCORE_LIBRARY}
	${QT_QTNETWORK_LIBRARY}
	${QT_QTXML_LIBRARY}
	${QT_HELP_LIBRARIES}
	${REC_RPC_LIBRARY}
	${REC_ROBOTINO_RPC_LIBRARY}
	${REC_ROBOTINO_DAEMONS_LIBRARY}
)

INSTALL(
  TARGETS ${NAME}
  RUNTIME DESTINATION bin
)

INSTALL(
	FILES
	menud.sh
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
	DESTINATION "${INSTALL_DIR}/etc/init.d"
)

FILE( GLOB SCRIPTS scripts/*.sh scripts/*.pl )

INSTALL(
  FILES
  ${SCRIPTS}
  PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  DESTINATION scripts
)

INSTALL(
  DIRECTORY 
  config/
  DESTINATION "${INSTALL_DIR}/etc/robotino/menud"
  PATTERN ".svn" EXCLUDE
)

GENERATE_VERSION( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.h" "${ROBOTINO_DAEMONS_VERSION}" "Menu Daemon" "${NAME}" )
GENERATE_VERSION_RC( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc"  "${ROBOTINO_DAEMONS_VERSION}" "Menu Daemon" "${NAME}" "${NAME}.exe" 0 )

IF( WIN32 )
	IF( ARCHITECTURE STREQUAL "i386" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "X86" "win32" )
	ELSEIF( ARCHITECTURE STREQUAL "amd64" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "AMD64" "win32" )
	ENDIF( ARCHITECTURE STREQUAL "i386" )
ENDIF( WIN32 )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( "Config" FILES ${CONFIG_FILES} )
SOURCE_GROUP( "Scripts" FILES ${SCRIPTS_FILES} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )
