SET(
  NAME
  qlcdd
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${SHARED_LIB_DIR}/rec/robotino/
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

SET(
	SRCS
	${SRCS}
)

SET(
	EXTERNAL_SRCS
	../lcdd2/AbstractDisplayDriver.cpp
)

MY_WRAP_CPP(
	MOC_SRCS
	${NAME}
	${HEADER}
)

QT4_ADD_RESOURCES(
	RCC_SRCS
	icons.qrc
)

IF( WIN32 )
	SET( SRCS ${SRCS} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc" )
ENDIF( WIN32 )

ADD_EXECUTABLE(
  ${NAME}
  ${SRCS}
  ${HEADER}
  ${MOC_SRCS}
  ${MOC_RPC_SRCS}
  ${RCC_SRCS}
  ${EXTERNAL_SRCS}
)

IF(WIN32)
SET_TARGET_PROPERTIES(
  ${NAME}
  PROPERTIES
  COMPILE_FLAGS "/wd4251 /MP"
)
ENDIF( WIN32 )

TARGET_LINK_LIBRARIES(
	${NAME}
	${QT_QTCORE_LIBRARY}
	${QT_QTGUI_LIBRARY}
	${QT_QTNETWORK_LIBRARY}
	${QT_QTXML_LIBRARY}
	${QT_HELP_LIBRARIES}
	${REC_RPC_LIBRARY}
	${REC_ROBOTINO_RPC_LIBRARY}
	${REC_ROBOTINO_DAEMONS_LIBRARY}
)

INSTALL(
  TARGETS ${NAME}
  RUNTIME DESTINATION bin
)

GENERATE_VERSION( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/qlcdd_version.h" ${ROBOTINO_DAEMONS_VERSION} "QLcd Daemon" "${NAME}" )
GENERATE_VERSION_RC( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/qlcdd_version.rc"  "${ROBOTINO_DAEMONS_VERSION}" "QLcd Daemon" "${NAME}" "${NAME}.exe" 0 )

IF( WIN32 )
	IF( ARCHITECTURE STREQUAL "i386" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "X86" "win32" )
	ELSEIF( ARCHITECTURE STREQUAL "amd64" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "AMD64" "win32" )
	ENDIF( ARCHITECTURE STREQUAL "i386" )
ENDIF( WIN32 )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( "External" FILES ${EXTERNAL_SRCS} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )
