SET(
  NAME
  simd
)

SET(
	CONFIG_FILES
	simd.conf
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

MY_WRAP_CPP(
	MOC_SRCS
	${NAME}
	${HEADER}
)

IF( WIN32 )
	SET( SRCS ${SRCS} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc" )
ENDIF( WIN32 )

ADD_EXECUTABLE(
  ${NAME}
  ${SRCS}
  ${HEADER}
  ${MOC_SRCS}
  ${MOC_RPC_SRCS}
  ${CONFIG_FILES}
)

IF(WIN32)
SET_TARGET_PROPERTIES(
  ${NAME}
  PROPERTIES
  COMPILE_FLAGS "/wd4251 /MP"
)
ENDIF( WIN32 )

TARGET_LINK_LIBRARIES(
	${NAME}
	${QT_QTCORE_LIBRARY}
	${QT_QTNETWORK_LIBRARY}
	${QT_QTXML_LIBRARY}
	${QT_HELP_LIBRARIES}
	${REC_RPC_LIBRARY}
	${REC_ROBOTINO_DAEMONS_LIBRARY}
	${REC_ROBOTINO_RPC_LIBRARY}
	${REC_ROBOTINO3_FLEETCOM_LIBRARY}
)

IF( WIN32 )
	TARGET_LINK_LIBRARIES(
		${NAME}
		setupapi
	)
ENDIF( WIN32 )

INSTALL(
  TARGETS ${NAME}
  RUNTIME DESTINATION bin
)

IF( NOT WIN32 )
	INSTALL(
		FILES 
		${CONFIG_FILES}
		DESTINATION "${INSTALL_DIR}/etc/robotino"
	)
ENDIF( NOT WIN32 )

GENERATE_VERSION( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.h" "${ROBOTINO_DAEMONS_VERSION}" "Control Daemon v3" "${NAME}" )
GENERATE_VERSION_RC( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}_version.rc"  "${ROBOTINO_DAEMONS_VERSION}" "Control Daemon v3" "${NAME}" "${NAME}.exe" 0 )

IF( WIN32 )
	IF( ARCHITECTURE STREQUAL "i386" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "X86" "win32" )
	ELSEIF( ARCHITECTURE STREQUAL "amd64" )
		GENERATE_MANIFEST( ${NAME} "${CMAKE_CURRENT_BINARY_DIR}/manifest.xml" ${ROBOTINO_DAEMONS_VERSION} "${NAME}.exe" "AMD64" "win32" )
	ENDIF( ARCHITECTURE STREQUAL "i386" )
ENDIF( WIN32 )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( "Config" FILES ${CONFIG_FILES} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )
