SET(
  NAME
  rec_math
)

MESSAGE("NAME:${NAME}")

FILE( GLOB REC_MATH_SRCS *.cpp )
FILE( GLOB REC_MATH_MAIN_HEADER *.h )
FILE( GLOB REC_MATH_PRIVATE_HEADER *.hpp )

#INCLUDE( numbers/CMakeLists.txt )
#INCLUDE( geometry2d/CMakeLists.txt )

#ADD_LIBRARY(
#	${NAME}
#	STATIC
#	${REC_MATH_SRCS}
#	${REC_MATH_MAIN_HEADER}
#	${REC_MATH_PRIVATE_HEADER}
#)

#IF(WIN32)
#	SET_TARGET_PROPERTIES(
#		${NAME}
#		PROPERTIES
#		COMPILE_FLAGS "/wd4251 /MP"
#	)
#ELSE( WIN32 )
#	SET( CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -fPIC -Wl,-export-dynamic" )
#	SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wl,-export-dynamic" )
#ENDIF( WIN32 )

#SOURCE_GROUP( Sources FILES ${REC_MATH_SRCS} ${REC_MATH_MAIN_HEADER} ${REC_MATH_PRIVATE_HEADER} )

SET( REC_MATH_INCLUDE_INSTALL_DIR include/rec/math )

#INSTALL(
#	TARGETS ${NAME}
#	ARCHIVE DESTINATION lib
#	LIBRARY DESTINATION lib
#	RUNTIME DESTINATION bin
#)

INSTALL(
	FILES
	${REC_MATH_MAIN_HEADER}
	DESTINATION ${REC_MATH_INCLUDE_INSTALL_DIR}
)
