SET(
  NAME
  rec_cruizcore
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

MY_WRAP_CPP(
	MOC_SRCS
	"${rec_cruizcore}"
	${HEADER}
)

ADD_LIBRARY(
  ${NAME}
  STATIC
  ${SRCS}
  ${HEADER}
  ${MOC_SRCS}
)

IF(WIN32 AND NOT MINGW)
	SET_TARGET_PROPERTIES( ${NAME} PROPERTIES COMPILE_FLAGS "/MP" )
ENDIF(WIN32 AND NOT MINGW)

TARGET_LINK_LIBRARIES(
	${NAME}
	rec_serialport
	${QT_QTCORE_LIBRARY}
	${QT_HELP_LIBRARIES}
)

IF( DO_COMMON_INSTALL )
	INSTALL(
	  TARGETS ${NAME}
	  LIBRARY DESTINATION lib
	  ARCHIVE DESTINATION lib
	  RUNTIME DESTINATION lib
	)

	INSTALL(
	  FILES
	  Com.h
	  DESTINATION include/rec/cruizcore
	)
ENDIF( DO_COMMON_INSTALL )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )