CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(
  NAME
  rec_laserrangefinder
)

SET( REC_LASERRANGEFINDER_INCLUDE_INSTALL_DIR include/rec/laserrangefinder )

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )
FILE( GLOB PRIVATE_HEADER *.hh *.hpp )

IF( NOT WIN32 )
INCLUDE( hokuyo/CMakeLists.txt )
INCLUDE( driver_base/CMakeLists.txt )
ENDIF( NOT WIN32 )

ADD_LIBRARY(
	${NAME}
	STATIC
	${SRCS}
	${HEADER}
	${PRIVATE_HEADER}
)

TARGET_LINK_LIBRARIES(
	${NAME}
	rec_serialport
	${QT_QTCORE_LIBRARY}
	${QT_HELP_LIBRARIES}
)

IF( DO_COMMON_INSTALL )
	INSTALL(
		TARGETS ${NAME}
		ARCHIVE DESTINATION lib
		LIBRARY DESTINATION lib
	#	RUNTIME DESTINATION ${BIN_INSTALL_DIR}
	)

	INSTALL(
		FILES
		${HEADER}
		DESTINATION ${REC_LASERRANGEFINDER_INCLUDE_INSTALL_DIR}
)
ENDIF( DO_COMMON_INSTALL )

SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )
SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
