SET(
  NAME
  rec_nstar
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

MY_WRAP_CPP(
	MOC_SRCS
	"${rec_nstar}"
	${HEADER}
)

#INCLUDE( messages/CMakeLists.txt )

ADD_LIBRARY(
  ${NAME}
  STATIC
  ${SRCS}
  ${HEADER}
  ${MOC_SRCS}
)

IF(WIN32 AND NOT MINGW)
	SET_TARGET_PROPERTIES( ${NAME} PROPERTIES COMPILE_FLAGS "/MP" )
ENDIF(WIN32 AND NOT MINGW)

TARGET_LINK_LIBRARIES(
	${NAME}
	${QT_QTCORE_LIBRARY}
	${QT_HELP_LIBRARIES}
)

IF( DO_COMMON_INSTALL )
	INSTALL(
	  TARGETS ${NAME}
	  LIBRARY DESTINATION lib
	  ARCHIVE DESTINATION lib
	  RUNTIME DESTINATION lib
	)

	INSTALL(
	  FILES
	  ${HEADER}
	  DESTINATION include/rec/nstar
	)
ENDIF( DO_COMMON_INSTALL )

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
SOURCE_GROUP( Moc REGULAR_EXPRESSION "(moc_|qrc_)" )