SET(
	NAME
	rec_vema
)

FILE( GLOB SRCS *.cpp )
FILE( GLOB MAIN_HEADER *.h )
FILE( GLOB PRIVATE_HEADER *.hpp )

ADD_LIBRARY(
	${NAME}
	STATIC
	${SRCS}
	${MAIN_HEADER}
	${PRIVATE_HEADER}
)

IF(WIN32 AND NOT MINGW)
SET_TARGET_PROPERTIES(
	${NAME}
	PROPERTIES
	COMPILE_FLAGS "/wd4251 /MP"
)
ENDIF(WIN32 AND NOT MINGW)

TARGET_LINK_LIBRARIES(
	${NAME}
	rec_pcan
)

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${MAIN_HEADER} ${PRIVATE_HEADER} )

IF( DO_COMMON_INSTALL )
	SET( REC_VEMA_INCLUDE_INSTALL_DIR include/rec/vema )

	INSTALL(
		TARGETS ${NAME}
		ARCHIVE DESTINATION lib
		LIBRARY DESTINATION lib
		RUNTIME DESTINATION bin
	)

	INSTALL(
		FILES
		${MAIN_HEADER}
		DESTINATION ${REC_VEMA_INCLUDE_INSTALL_DIR}
	)
ENDIF( DO_COMMON_INSTALL )
